Added Google OAUTH

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/27db1a5789.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="https://i.pinimg.com/originals/bf/c2/67/bfc267127a451c7ad3f64b79db279af2.jpg" type="image/x-icon">
     <title>My CLIPS</title>
 </head>
