--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,9 @@
-<h1>Register</h1>
+<h1><i class="fas fa-user-plus fa-3x"></i></h1>
 <form action="/register" method="POST">
     <input type="text" name="name" placeholder="name" required />
     <input type="text" name="username" placeholder="username" required />
     <input type="text" name="password" placeholder="password" required />
-    <button type="submit">Sign Up</button>
+    <button type="submit">Sign Up  <i class="fas fa-sign-in-alt"></i></button>
     <label>Already an user? <a href="/login">login here</a> </label>
 </form>
 
@@ -14,7 +14,7 @@
     body{
         display: flex;
         flex-direction: column;
-        min-height: 100vh;
+        min-height: 80vh;
         justify-content: center;
         align-items: center;
     }
